# pyrepgen

./: README.md  pyproject.toml
src/: __init__.py  __main__.py
src/pyrepgen/: __main__.py  cli.py  config.py  github_fetch.py  gitlab_fetch.py  plot_gen.py  plot_manager.py  processing.py
tests/yaml/: config.yaml  config_github.yaml  config_gitlab.yaml
